--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,8 +5,11 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOHUnDp5RSRK72MLhyII2No",
+      "collapsed_sections": [
+        "BpmP8jkp7JGH",
+        "v8XbNjg1jaxH"
+      ],
+      "authorship_tag": "ABX9TyONAzq0KNEcZXgjbAMl4qb+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +33,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kvfA4FP3hMtH",
-        "outputId": "b55733fd-c903-4132-be1c-4c097cc13c9d"
+        "outputId": "4671decc-07f6-4a55-c170-39ed27f9b86a"
       },
       "outputs": [
         {
@@ -57,42 +60,10 @@
         "import this"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jRXPc99BiqwX",
-        "outputId": "a1c7703d-0c24-4247-f36a-328d29b0b3da"
+        "id": "jRXPc99BiqwX"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The Zen of Python, by Tim Peters\n",
-            "\n",
-            "Beautiful is better than ugly.\n",
-            "Explicit is better than implicit.\n",
-            "Simple is better than complex.\n",
-            "Complex is better than complicated.\n",
-            "Flat is better than nested.\n",
-            "Sparse is better than dense.\n",
-            "Readability counts.\n",
-            "Special cases aren't special enough to break the rules.\n",
-            "Although practicality beats purity.\n",
-            "Errors should never pass silently.\n",
-            "Unless explicitly silenced.\n",
-            "In the face of ambiguity, refuse the temptation to guess.\n",
-            "There should be one-- and preferably only one --obvious way to do it.\n",
-            "Although that way may not be obvious at first unless you're Dutch.\n",
-            "Now is better than never.\n",
-            "Although never is often better than *right* now.\n",
-            "If the implementation is hard to explain, it's a bad idea.\n",
-            "If the implementation is easy to explain, it may be a good idea.\n",
-            "Namespaces are one honking great idea -- let's do more of those!\n"
-          ]
-        }
-      ]
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -114,9 +85,9 @@
           "height": 35
         },
         "id": "eicG8V360peu",
-        "outputId": "2e4f8f2f-50a5-4dc7-9dc6-e285e3f74027"
+        "outputId": "1ceabe7e-e63a-424c-949c-4e9b898cf121"
       },
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +100,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 23
         }
       ]
     },
@@ -144,9 +115,9 @@
           "height": 35
         },
         "id": "OTo19w2C0ve6",
-        "outputId": "6b2a8dc0-c3b0-48a5-bfe1-b15dada8c995"
+        "outputId": "92376c59-e187-4ebb-b544-6bb3bc6bbfc8"
       },
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,7 +130,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 24
         }
       ]
     },
@@ -174,9 +145,9 @@
           "height": 35
         },
         "id": "x0q-wKR00z1j",
-        "outputId": "135cf07f-ef8e-4007-abf4-c0f815829d71"
+        "outputId": "39ebd479-d269-4711-af31-05d7e5dfa9e7"
       },
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,7 +160,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 25
         }
       ]
     },
@@ -204,9 +175,9 @@
           "height": 35
         },
         "id": "eb0ddW_J016S",
-        "outputId": "7cbbe505-af1e-4d27-b3f9-557006ad73d3"
+        "outputId": "82cb9a2f-569a-41dc-b4a9-7e849a4f686c"
       },
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +190,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 26
         }
       ]
     },
@@ -234,9 +205,9 @@
           "height": 35
         },
         "id": "USMMj1zv073U",
-        "outputId": "4d72f544-c601-4f9c-bbcc-ad576c4bc3fa"
+        "outputId": "690edd05-37f5-4f17-fc7e-2a44f8cc827e"
       },
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +220,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 27
         }
       ]
     },
@@ -264,9 +235,9 @@
           "height": 35
         },
         "id": "4I7kF6dp0_Ab",
-        "outputId": "b2cb233a-5752-4ff0-a478-c7b39b2a10f7"
+        "outputId": "0523e83b-a7a3-46f3-ad8b-687dbb647328"
       },
-      "execution_count": 8,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +250,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 28
         }
       ]
     },
@@ -293,9 +264,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "30z4Siii1hj1",
-        "outputId": "afb6c97b-8c92-44c5-fd5f-6d82b7445db9"
+        "outputId": "8ae4bca8-f5f5-49ca-c7bc-5ba76af01ee5"
       },
-      "execution_count": 9,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -305,7 +276,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 29
         }
       ]
     },
@@ -317,7 +288,7 @@
       "metadata": {
         "id": "6UnsmyWD1m6J"
       },
-      "execution_count": 11,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -330,9 +301,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Co9hmtxF1vBL",
-        "outputId": "0fbff14e-f1cb-4d79-9beb-336e08dfa44c"
+        "outputId": "b10facdf-8000-4f68-8a67-b98a89b629dd"
       },
-      "execution_count": 12,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 31
         }
       ]
     },
@@ -359,9 +330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2KaRmA6l2ZJ2",
-        "outputId": "3ad28bf8-474d-4391-80c5-89a35b0ba1ba"
+        "outputId": "0c0fdb26-04da-45b6-c537-81183a900d97"
       },
-      "execution_count": 14,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +342,486 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## String Indexing"
+      ],
+      "metadata": {
+        "id": "BpmP8jkp7JGH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print the object \n",
+        "print(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jOz_vKoq7UfA",
+        "outputId": "7162bf99-9346-43b3-db05-d0ee150cca8f"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test string\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# show first element (in this case, a letter)\n",
+        "s[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "Xua2e-DB7jAC",
+        "outputId": "8b52f4c0-5b43-4ded-c0a9-9c78403e6335"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'t'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s[4]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "d8Yas2sV7q_b",
+        "outputId": "2708dd97-c6ec-4545-88ca-b5d2bf0ed785"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "' '"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s[7]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "Kx3gCFyq7y0s",
+        "outputId": "efbaa029-c1af-4f04-c0a2-e125133ef7cf"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'r'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "greeting = 'Hello'\n",
+        "name = 'Mark'\n",
+        "print(greeting + name)\n",
+        "print(greeting+ \" \" + name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0D_1hxKTcVS3",
+        "outputId": "356f29d9-0a7d-47e4-ad6e-0a620369ca9c"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HelloMark\n",
+            "Hello Mark\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Input Functions"
+      ],
+      "metadata": {
+        "id": "v8XbNjg1jaxH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "greeting = \"Hello\"\n",
+        "name = input (\"What is your name? \")\n",
+        "print(greeting + \" \" + name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "arYfqjMXct8Z",
+        "outputId": "865a1b09-8bd2-44ed-f3de-1371fdd4e4f0"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your name? Gabriel\n",
+            "Hello Gabriel\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input (\"What is your name? \")\n",
+        "city = input (\"What City do you live in? \")\n",
+        "age = input (\"How old are you? \")\n",
+        "print(f'Hi there, {name}. You look great for someone who is {age}. And you are from {city}? Nice!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aslm3PQkfDsS",
+        "outputId": "41e2308c-5808-477e-917f-588837ab9faf"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your name? Gabriel\n",
+            "What City do you live in? Queens\n",
+            "How old are you? 20\n",
+            "Hi there, Gabriel. You look great for someone who is 20. And you are from Queens ? Nice!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {} {} {}\" .format(\"Red\", \"Green\", \"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BRKXqDNahpOZ",
+        "outputId": "0d45cef0-c02a-4504-e726-3eeca5154da4"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Green Blue\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {0} {1} {2}\" .format(\"Red\", \"Green\", \"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zS-bbfLsiSeA",
+        "outputId": "f1a4540d-0396-4d99-9835-26b17fb29068"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Green Blue\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {1} {1} {1}\" .format(\"Red\", \"Green\", \"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o1s1K_Crianj",
+        "outputId": "574a6fca-3173-4895-ea3c-c2abd7525dfa"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Green Green Green\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {r} {g} {b}\" .format(r=\"Red\", g=\"Green\", b=\"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VDgCUJmviePF",
+        "outputId": "44991291-4956-41cc-fa86-4c48ad0cd83c"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Green Blue\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Numbers"
+      ],
+      "metadata": {
+        "id": "7Vgo4xTMjJ8J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 14\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0OcjPRsXjNbn",
+        "outputId": "9a6c31b8-6747-4330-e861-be0c8dc4605a"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 4\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "itn00Y2Qjl67",
+        "outputId": "afdd001d-7b9b-4b54-c50a-e0e03025c10e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (a + b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DtKqCa1CjrLw",
+        "outputId": "87370a4a-9075-4c40-eae0-73182ead025f"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (a - b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v8NZi55GjwCc",
+        "outputId": "4aeb9d7c-3505-49a0-aaf3-bc24302d106b"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (a / b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u3i6PXmxj1NA",
+        "outputId": "a554e5af-6b1d-411e-e687-c1b5841762e8"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (a * b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1uRHR3ZXj3Rr",
+        "outputId": "d4d07ab5-0f95-4cda-c1d3-112a1cf97400"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "56\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (a // b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lYsj9dRrkdKp",
+        "outputId": "6faea005-4665-4a8f-c54d-2b7b916743f3"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
         }
       ]
     }
